--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Welcome</h1>
     <button>Click</button>
-    <button>Click</button>
-    <button>Click</button>
-    <button>Click</button>
-    <button>Click</button>
-    <button>Click</button>
-    <button>Click</button>
+   
     <script src="script.js"></script>
 </body>
 </html>
